; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/host/extr_cavium.c_finish_dma.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/host/extr_cavium.c_finish_dma.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cvm_mmc_host = type { i64 }
%struct.mmc_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cvm_mmc_host*, %struct.mmc_data*)* @finish_dma to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @finish_dma(%struct.cvm_mmc_host* %0, %struct.mmc_data* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.cvm_mmc_host*, align 8
  %5 = alloca %struct.mmc_data*, align 8
  store %struct.cvm_mmc_host* %0, %struct.cvm_mmc_host** %4, align 8
  store %struct.mmc_data* %1, %struct.mmc_data** %5, align 8
  %6 = load %struct.cvm_mmc_host*, %struct.cvm_mmc_host** %4, align 8
  %7 = getelementptr inbounds %struct.cvm_mmc_host, %struct.cvm_mmc_host* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %19

10:                                               ; preds = %2
  %11 = load %struct.mmc_data*, %struct.mmc_data** %5, align 8
  %12 = getelementptr inbounds %struct.mmc_data, %struct.mmc_data* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = icmp sgt i32 %13, 1
  br i1 %14, label %15, label %19

15:                                               ; preds = %10
  %16 = load %struct.cvm_mmc_host*, %struct.cvm_mmc_host** %4, align 8
  %17 = load %struct.mmc_data*, %struct.mmc_data** %5, align 8
  %18 = call i32 @finish_dma_sg(%struct.cvm_mmc_host* %16, %struct.mmc_data* %17)
  store i32 %18, i32* %3, align 4
  br label %23

19:                                               ; preds = %10, %2
  %20 = load %struct.cvm_mmc_host*, %struct.cvm_mmc_host** %4, align 8
  %21 = load %struct.mmc_data*, %struct.mmc_data** %5, align 8
  %22 = call i32 @finish_dma_single(%struct.cvm_mmc_host* %20, %struct.mmc_data* %21)
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %19, %15
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @finish_dma_sg(%struct.cvm_mmc_host*, %struct.mmc_data*) #1

declare dso_local i32 @finish_dma_single(%struct.cvm_mmc_host*, %struct.mmc_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
